--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "deploy": "gh-pages -d build"
   },
   "dependencies": {
+    "bootstrap": "^5.0.0-beta3",
     "firebase": "^8.4.2",
     "next": "10.2.0",
     "react": "17.0.2",
+    "react-bootstrap": "^1.5.2",
     "react-dom": "17.0.2",
     "sass": "^1.32.12"
   },
