--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "firebase": "^8.4.2",
     "next": "10.2.0",
     "react": "17.0.2",
-    "react-bootstrap": "^1.5.2",
+    "react-bootstrap-v5": "^1.4.0",
     "react-dom": "17.0.2",
     "sass": "^1.32.12"
   },
