--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "bootstrap": "^5.0.0-beta3",
+    "classnames": "^2.3.1",
     "firebase": "^8.4.2",
     "next": "10.2.0",
     "react": "17.0.2",
